Revert "small alignment fix (#73)"
This reverts commit 596ba44900e896ddf62661d2eafe1be08988a690.

--- a/themes/rad/assets/sass/partials/_nav-bar.scss
+++ b/themes/rad/assets/sass/partials/_nav-bar.scss
@@ -20,7 +20,6 @@
     justify-self: flex-end;
 
     .header-btn {
-      padding-top: 1px;
       margin-left: 20px;
     }
 
@@ -59,7 +58,6 @@ nav {
     li {
       font-size: 16px;
       margin-left: 20px;
-      padding-top: 1px;
     }
   }
 
